Fix courses API and documentation
